--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,12 +1,24 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      >
     <h:body>
-        Hello from Facelets
+
+    	<ui:composition template="./resources/template/commonLayout.xhtml">
+            <ui:define name="header">
+                <h1>Login</h1>
+    		</ui:define>
+            <ui:define name="content">
+                <!--<div class="contentBackground">
+                    fdfddf
+                </div>-->
+                <div class="navBox">
+                    Link 1
+                </div>
+    		</ui:define>
+    	</ui:composition>
     </h:body>
 </html>
-
