Update: Nav divs changed to buttons

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -15,9 +15,12 @@
                 <!--<div class="contentBackground">
                     fdfddf
                 </div>-->
-                <div class="navBox">
-                    Link 1
-                </div>
+                <h:form>
+                    <h:commandButton class="navButton" value="Normal Nav Button" />
+                </h:form>
+                <h:form>
+                    <h:commandButton class="navButtonSmall" value="Small Nav Button" />
+                </h:form>
     		</ui:define>
     	</ui:composition>
     </h:body>
