--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,10 +13,17 @@
     		</ui:define>
             <ui:define name="content">
                 <b:row>
-                    <b:column span="12">
-                        <div class="contentBackground">
-                            Test content background
-                        </div>
+                    <b:column styleClass="contentBackground" span="12">
+                        <h:form>
+                            <b:row>
+                                <b:column offset="2" span="4">
+                                    <h:outputLabel for="userName">Username</h:outputLabel>
+                                </b:column>
+                                <b:column span="4">
+                                    <h:inputText id="userName"></h:inputText>
+                                </b:column>
+                            </b:row>
+                        </h:form>
                     </b:column>
                 </b:row>
     		</ui:define>
