--- a/src/main/webapp/addUser.xhtml
+++ b/src/main/webapp/addUser.xhtml
@@ -14,7 +14,93 @@
             <ui:define name="content">
                 <b:row>
                     <b:column styleClass="contentBackground" span="12">
-                        TODO
+                        <h:form id="newUserForm">
+                            <b:row>
+                                <b:column offset="1" span="3">
+                                    <h:outputLabel for="userName">Username</h:outputLabel>
+                                </b:column>
+                                <b:column span="4">
+                                    <h:inputText id="userName">
+                                        <f:validateLength minimum="3" />
+                                    </h:inputText>
+                                </b:column>
+                            </b:row>
+                            <b:row>
+                                <b:column offset="1" span="3">
+                                    <h:outputLabel for="password">Password</h:outputLabel>
+                                </b:column>
+                                <b:column span="4">
+                                    <h:inputSecret id="password">
+                                        <f:validateLength minimum="3" />
+                                    </h:inputSecret>
+                                </b:column>
+                            </b:row>
+                            <b:row>
+                                <b:column offset="1" span="3">
+                                    <h:outputLabel for="firstName">First name</h:outputLabel>
+                                </b:column>
+                                <b:column span="4">
+                                    <h:inputText id="firstName">
+                                        <f:validateLength minimum="1" />
+                                    </h:inputText>
+                                </b:column>
+                            </b:row>
+                            <b:row>
+                                <b:column offset="1" span="3">
+                                    <h:outputLabel for="lastName">Last name</h:outputLabel>
+                                </b:column>
+                                <b:column span="4">
+                                    <h:inputText id="lastName">
+                                        <f:validateLength minimum="1" />
+                                    </h:inputText>
+                                </b:column>
+                            </b:row>
+                            <b:row>
+                                <b:column offset="1" span="3">
+                                    <h:outputLabel for="address">Address</h:outputLabel>
+                                </b:column>
+                                <b:column span="4">
+                                    <h:inputText id="address">
+                                        <f:validateLength minimum="3" />
+                                    </h:inputText>
+                                </b:column>
+                            </b:row>
+                            <b:row>
+                                <b:column offset="1" span="3">
+                                    <h:outputLabel for="postcode">Postcode</h:outputLabel>
+                                </b:column>
+                                <b:column span="4">
+                                    <h:inputText id="postcode">
+                                        <f:validateLength minimum="6" />
+                                    </h:inputText>
+                                </b:column>
+                            </b:row>
+                            <b:row>
+                                <b:column offset="1" span="3">
+                                    <h:outputLabel for="phone">Phone number</h:outputLabel>
+                                </b:column>
+                                <b:column span="4">
+                                    <h:inputText id="phone">
+                                        <f:validateLength minimum="3" />
+                                    </h:inputText>
+                                </b:column>
+                            </b:row>
+                            <b:row>
+                                <b:column offset="1" span="3">
+                                    <h:outputLabel for="email">Email</h:outputLabel>
+                                </b:column>
+                                <b:column span="4">
+                                    <h:inputText id="email">
+                                        <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
+                                    </h:inputText>
+                                </b:column>
+                            </b:row>
+                            <b:row>
+                                <b:column offset="4" span="4">
+                                    <h:commandButton value="Add" styleClass="actionButton" />
+                                </b:column>
+                            </b:row>
+                        </h:form>
                     </b:column>
                 </b:row>
     		</ui:define>
