--- a/src/main/webapp/addEditUser.xhtml
+++ b/src/main/webapp/addEditUser.xhtml
@@ -9,8 +9,11 @@
 
     	<ui:composition template="./resources/template/commonLayout.xhtml">
             <ui:define name="header">
-                <h1>Add new user</h1>
-    		</ui:define>
+                <h1>
+                    <h:outputText value="Add" rendered="#{clientController.editingClient.id eq null}" />
+                    <h:outputText value="Edit" rendered="#{clientController.editingClient.id ne null}" />
+                </h1>
+            </ui:define>
             <ui:define name="content">
                 <b:row>
                     <b:column styleClass="contentBackground" span="12">
@@ -20,7 +23,7 @@
                                     <h:outputLabel for="userName">Username</h:outputLabel>
                                 </b:column>
                                 <b:column span="4">
-                                    <h:inputText id="userName">
+                                    <h:inputText id="userName" value="#{clientController.editingClient.username}">
                                         <f:validateLength minimum="3" />
                                     </h:inputText>
                                 </b:column>
@@ -30,7 +33,7 @@
                                     <h:outputLabel for="password">Password</h:outputLabel>
                                 </b:column>
                                 <b:column span="4">
-                                    <h:inputSecret id="password">
+                                    <h:inputSecret id="password" value="#{clientController.editingClient.password}">
                                         <f:validateLength minimum="3" />
                                     </h:inputSecret>
                                 </b:column>
@@ -40,7 +43,7 @@
                                     <h:outputLabel for="firstName">First name</h:outputLabel>
                                 </b:column>
                                 <b:column span="4">
-                                    <h:inputText id="firstName">
+                                    <h:inputText id="firstName" value="#{clientController.editingClient.firstName}">
                                         <f:validateLength minimum="1" />
                                     </h:inputText>
                                 </b:column>
@@ -50,7 +53,7 @@
                                     <h:outputLabel for="lastName">Last name</h:outputLabel>
                                 </b:column>
                                 <b:column span="4">
-                                    <h:inputText id="lastName">
+                                    <h:inputText id="lastName" value="#{clientController.editingClient.lastName}">
                                         <f:validateLength minimum="1" />
                                     </h:inputText>
                                 </b:column>
@@ -60,7 +63,7 @@
                                     <h:outputLabel for="address">Address</h:outputLabel>
                                 </b:column>
                                 <b:column span="4">
-                                    <h:inputText id="address">
+                                    <h:inputText id="address" value="#{clientController.editingClient.address}">
                                         <f:validateLength minimum="3" />
                                     </h:inputText>
                                 </b:column>
@@ -70,7 +73,7 @@
                                     <h:outputLabel for="postcode">Postcode</h:outputLabel>
                                 </b:column>
                                 <b:column span="4">
-                                    <h:inputText id="postcode">
+                                    <h:inputText id="postcode" value="#{clientController.editingClient.postcode}">
                                         <f:validateLength minimum="6" />
                                     </h:inputText>
                                 </b:column>
@@ -80,7 +83,7 @@
                                     <h:outputLabel for="phone">Phone number</h:outputLabel>
                                 </b:column>
                                 <b:column span="4">
-                                    <h:inputText id="phone">
+                                    <h:inputText id="phone" value="#{clientController.editingClient.phone}">
                                         <f:validateLength minimum="3" />
                                     </h:inputText>
                                 </b:column>
@@ -90,14 +93,14 @@
                                     <h:outputLabel for="email">Email</h:outputLabel>
                                 </b:column>
                                 <b:column span="4">
-                                    <h:inputText id="email">
+                                    <h:inputText id="email" value="#{clientController.editingClient.email}">
                                         <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
                                     </h:inputText>
                                 </b:column>
                             </b:row>
                             <b:row>
                                 <b:column offset="4" span="4">
-                                    <h:commandButton value="Add" styleClass="actionButton" />
+                                    <h:commandButton value="Add" styleClass="actionButton" action="#{clientController.doAddEditClient()}" />
                                 </b:column>
                             </b:row>
                         </h:form>
