--- a/src/main/webapp/addEditUser.xhtml
+++ b/src/main/webapp/addEditUser.xhtml
@@ -10,8 +10,8 @@
     	<ui:composition template="./resources/template/commonLayout.xhtml">
             <ui:define name="header">
                 <h1>
-                    <h:outputText value="Add" rendered="#{clientController.editingClient.id eq null}" />
-                    <h:outputText value="Edit" rendered="#{clientController.editingClient.id ne null}" />
+                    <h:outputText value="Add new user" rendered="#{clientController.editingClient.id eq null}" />
+                    <h:outputText value="Editing user: #{clientController.editingClient.username}" rendered="#{clientController.editingClient.id ne null}" />
                 </h1>
             </ui:define>
             <ui:define name="content">
@@ -100,7 +100,8 @@
                             </b:row>
                             <b:row>
                                 <b:column offset="4" span="4">
-                                    <h:commandButton value="Add" styleClass="actionButton" action="#{clientController.doAddEditClient()}" />
+                                    <h:commandButton value="Add" styleClass="actionButton" action="#{clientController.doAddClient()}" rendered="#{clientController.editingClient.id eq null}" />
+                                    <h:commandButton value="Edit" styleClass="actionButton" action="#{clientController.doEditClient()}" rendered="#{clientController.editingClient.id ne null}" />
                                 </b:column>
                             </b:row>
                         </h:form>
