--- a/src/main/webapp/start.xhtml
+++ b/src/main/webapp/start.xhtml
@@ -15,7 +15,7 @@
                     <h:form>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton class="navButton" value="Home" action="#{startController.goHome()}" />
+                                <h:commandButton class="navButton" value="Home" action="#{startController.goToHome()}" />
                             </b:column>
                         </b:row>
                         <b:row>
