--- a/src/main/webapp/users.xhtml
+++ b/src/main/webapp/users.xhtml
@@ -15,12 +15,12 @@
                     <h:form>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" action="#{loginController.goAddUser()}" value="Add new user" />
+                                <h:commandButton styleClass="navButton" action="#{loginController.goToAddUser()}" value="Add new user" />
                             </b:column>
                         </b:row>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" action="#{loginController.goBrowseUsers()}" value="Browse users" />
+                                <h:commandButton styleClass="navButton" action="#{loginController.goToBrowseUsers()}" value="Browse users" />
                             </b:column>
                         </b:row>
                     </h:form>
