--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -15,7 +15,7 @@
                     <h:form>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" action="#{loginController.goUsers()}" value="Users" />
+                                <h:commandButton styleClass="navButton" action="#{loginController.goToUsers()}" value="Users" />
                             </b:column>
                         </b:row>
                         <b:row>
