--- a/src/main/webapp/viewUser.xhtml
+++ b/src/main/webapp/viewUser.xhtml
@@ -10,32 +10,20 @@
     	<ui:composition template="./resources/template/commonLayout.xhtml">
             <ui:define name="header">
                 <h1>
-                    <h:outputText value="Add new user" rendered="#{clientController.editingClient.id eq null}" />
-                    <h:outputText value="Editing user: #{clientController.editingClient.username}" rendered="#{clientController.editingClient.id ne null}" />
+                    <h:outputText value="Viewing user: #{clientController.editingClient.username}"/>
                 </h1>
             </ui:define>
             <ui:define name="content">
                 <b:row>
                     <b:column styleClass="contentBackground" span="12">
-                        <h:form id="newUserForm">
+                        <h:form>
                             <b:row>
                                 <b:column offset="1" span="3">
                                     <h:outputLabel for="userName">Username</h:outputLabel>
                                 </b:column>
                                 <b:column span="4">
                                     <h:inputText id="userName" value="#{clientController.editingClient.username}">
-                                        <f:validateLength minimum="3" />
                                     </h:inputText>
-                                </b:column>
-                            </b:row>
-                            <b:row>
-                                <b:column offset="1" span="3">
-                                    <h:outputLabel for="password">Password</h:outputLabel>
-                                </b:column>
-                                <b:column span="4">
-                                    <h:inputSecret id="password" value="#{clientController.editingClient.password}">
-                                        <f:validateLength minimum="3" />
-                                    </h:inputSecret>
                                 </b:column>
                             </b:row>
                             <b:row>
@@ -44,7 +32,6 @@
                                 </b:column>
                                 <b:column span="4">
                                     <h:inputText id="firstName" value="#{clientController.editingClient.firstName}">
-                                        <f:validateLength minimum="1" />
                                     </h:inputText>
                                 </b:column>
                             </b:row>
@@ -54,7 +41,6 @@
                                 </b:column>
                                 <b:column span="4">
                                     <h:inputText id="lastName" value="#{clientController.editingClient.lastName}">
-                                        <f:validateLength minimum="1" />
                                     </h:inputText>
                                 </b:column>
                             </b:row>
@@ -64,7 +50,6 @@
                                 </b:column>
                                 <b:column span="4">
                                     <h:inputText id="address" value="#{clientController.editingClient.address}">
-                                        <f:validateLength minimum="3" />
                                     </h:inputText>
                                 </b:column>
                             </b:row>
@@ -74,7 +59,6 @@
                                 </b:column>
                                 <b:column span="4">
                                     <h:inputText id="postcode" value="#{clientController.editingClient.postcode}">
-                                        <f:validateLength minimum="6" />
                                     </h:inputText>
                                 </b:column>
                             </b:row>
@@ -84,7 +68,6 @@
                                 </b:column>
                                 <b:column span="4">
                                     <h:inputText id="phone" value="#{clientController.editingClient.phone}">
-                                        <f:validateRegex pattern="^([a-zA-Z,#/ \.\(\)\-\+\*]*[0-9]){7}[0-9a-zA-Z,#/ \.\(\)\-\+\*]*$" />
                                     </h:inputText>
                                 </b:column>
                             </b:row>
@@ -94,14 +77,12 @@
                                 </b:column>
                                 <b:column span="4">
                                     <h:inputText id="email" value="#{clientController.editingClient.email}">
-                                        <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
                                     </h:inputText>
                                 </b:column>
                             </b:row>
                             <b:row>
                                 <b:column offset="4" span="4">
-                                    <h:commandButton value="Add" styleClass="actionButton" action="#{clientController.doAddClient()}" rendered="#{clientController.editingClient.id eq null}" />
-                                    <h:commandButton value="Edit" styleClass="actionButton" action="#{clientController.doEditClient()}" rendered="#{clientController.editingClient.id ne null}" />
+                                    <h:commandButton value="Back" styleClass="actionButton" action="#{startController.goToBrowseUsers()}"/>
                                 </b:column>
                             </b:row>
                         </h:form>
