New: Search users by different attributes

--- a/src/main/webapp/browseUsers.xhtml
+++ b/src/main/webapp/browseUsers.xhtml
@@ -6,9 +6,10 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:body>
-
     	<ui:composition template="./resources/template/commonLayout.xhtml">
             <ui:define name="header">
+                <!-- Fixes problem of AJAX updated buttons not working the first time they're clicked -->
+                <h:outputScript name="js/ajaxFix.js" target="head" />
                 <h1>Browse users</h1>
             </ui:define>
             <ui:define name="content">
@@ -22,10 +23,20 @@
                         <b:row>
                             <h:form id="searchUsers">
                                 <b:column offset="1" span="10" styleClass="searchBarContainer">
-                                        <h:inputText id="searchBar" styleClass="searchBar">
-                                            <f:ajax event="keyup" execute="@this" render="searchResults" listener="#{clientController.doSearchClient(param['searchUsers:searchBar'])}" />
+                                        <h:inputText id="searchBar" value="#{clientController.searchText}" styleClass="searchBar">
+                                            <f:ajax event="keyup" execute="@this" render="searchResults" listener="#{clientController.doSearchClient(param['searchUsers:searchType'], param['searchUsers:searchBar'])}"/>
                                         </h:inputText>
-                                        <h:commandButton value="Search" action="#{clientController.doSearchClient(param['searchUsers:searchBar'])}"/>
+                                        <h:selectOneMenu id="searchType" value="#{clientController.searchType}">
+                                            <f:selectItem itemValue="username" itemLabel="Username" />
+                                            <f:selectItem itemValue="firstName" itemLabel="First Name" />
+                                            <f:selectItem itemValue="lastName" itemLabel="Last Name" />
+                                            <f:selectItem itemValue="address" itemLabel="Address" />
+                                            <f:selectItem itemValue="postcode" itemLabel="Postcode" />
+                                            <f:selectItem itemValue="phone" itemLabel="Phone" />
+                                            <f:selectItem itemValue="email" itemLabel="Email" />
+                                            <f:ajax event='change' execute='@this' render="searchResults" listener="#{clientController.doSearchClient(param['searchUsers:searchType'], param['searchUsers:searchBar'])}"/>
+                                        </h:selectOneMenu>
+                                        <h:commandButton value="Search" action="#{clientController.doSearchClient(param['searchUsers:searchType'], param['searchUsers:searchBar'])}"/>
                                 </b:column>
                             </h:form>
                         </b:row>
@@ -52,7 +63,7 @@
                                     </h:column>
                                     <h:column>
                                         <f:facet name="header">Email Address</f:facet>
-                                        #{client.email}
+                                        <h:outputLink value="mailto:#{client.email}">#{client.email}</h:outputLink>
                                     </h:column>
                                     <h:column>
                                         <f:facet name="header">Actions</f:facet>
