--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,20 +16,21 @@
                     <b:column styleClass="contentBackground" span="12">
                         <h:form id="loginForm">
                             <b:row>
-                                <b:column offset="1" span="3">
+                                <b:column offset="1" span="2">
                                     <h:outputLabel for="userName">Username</h:outputLabel>
                                 </b:column>
-                                <b:column span="4">
-                                    <h:inputText id="userName" value="#{loginController.userName}">
+                                <b:column span="3">
+                                    <h:inputText id="userName" label="Username" value="#{loginController.userName}">
                                         <f:validateLength minimum="3" />
                                     </h:inputText>
                                 </b:column>
-                                <b:column span="4">
+                                <b:column span="5">
                                     DEV - Use "admin" as user
+                                    <b:message for="userName" />
                                 </b:column>
                             </b:row>
                             <b:row>
-                                <b:column offset="4" span="4">
+                                <b:column offset="3" span="3">
                                     <h:commandButton value="Login" action="#{loginController.doLogin()}" styleClass="actionButton" />
                                 </b:column>
                             </b:row>
