--- a/src/main/webapp/browseUsers.xhtml
+++ b/src/main/webapp/browseUsers.xhtml
@@ -26,7 +26,7 @@
                                         <h:inputText id="searchBar" value="#{clientController.searchText}" styleClass="searchBar">
                                             <f:ajax event="keyup" execute="@this" render="searchResults" listener="#{clientController.doSearchClient(param['searchUsers:searchType'], param['searchUsers:searchBar'])}"/>
                                         </h:inputText>
-                                        <h:selectOneMenu id="searchType" value="#{clientController.searchType}">
+                                        <h:selectOneMenu id="searchType" value="#{clientController.searchTypeText}">
                                             <f:selectItem itemValue="username" itemLabel="Username" />
                                             <f:selectItem itemValue="firstName" itemLabel="First Name" />
                                             <f:selectItem itemValue="lastName" itemLabel="Last Name" />
