Update: Check to see if a user already exists before adding a new one

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,11 +21,11 @@
                                 </b:column>
                                 <b:column span="3">
                                     <h:inputText id="userName" label="Username" value="#{loginController.userName}">
-                                        <f:validateLength minimum="3" />
+                                        <f:validateLength minimum="6" />
                                     </h:inputText>
                                 </b:column>
                                 <b:column span="5">
-                                    DEV - Use "admin" as user
+                                    DEV - Use "adminadmin" as user
                                     <b:message for="userName" />
                                 </b:column>
                             </b:row>
