--- a/src/main/webapp/viewUser.xhtml
+++ b/src/main/webapp/viewUser.xhtml
@@ -19,7 +19,7 @@
             <ui:define name="content">
                 <b:row>
                     <b:column styleClass="contentBackground" span="12">
-                        <h:form>
+                        <h:form id="viewUserForm">
                             <b:row>
                                 <b:column offset="1" span="2">
                                     <h:outputLabel for="userName">Username</h:outputLabel>
@@ -53,6 +53,15 @@
                                 </b:column>
                                 <b:column span="3">
                                     <h:inputText id="address" value="#{clientController.editingClient.address}">
+                                    </h:inputText>
+                                </b:column>
+                            </b:row>
+                            <b:row>
+                                <b:column offset="1" span="2">
+                                    <h:outputLabel for="country">Country</h:outputLabel>
+                                </b:column>
+                                <b:column span="3">
+                                    <h:inputText id="acountry" value="#{clientController.editingClient.country}">
                                     </h:inputText>
                                 </b:column>
                             </b:row>
