New: AJAX check whether a user exists when adding or editing a user

--- a/src/main/webapp/addEditUser.xhtml
+++ b/src/main/webapp/addEditUser.xhtml
@@ -31,10 +31,11 @@
                                 <b:column span="3">
                                     <h:inputText id="userName" label="Username" value="#{clientController.editingClient.username}">
                                         <f:validateLength minimum="6" />
+                                        <f:ajax event="keyup" execute="@this" render="newUserForm:userNameMessage" listener="#{clientController.clientExists(param['newUserForm:userName'], true, 'newUserForm:userName')}"/>
                                     </h:inputText>
                                 </b:column>
                                 <b:column span="5">
-                                    <b:message for="userName"/>
+                                    <b:message id="userNameMessage" for="userName"/>
                                 </b:column>
                             </b:row>
                             <b:row>
